welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:13: error: ';' expected but integer literal found.
						return die1 + die 2 + &
                                                                  ^